<!-- activity_main.xml -->
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="16dp"
            tools:context=".MainActivity">

            <Button
                android:id="@+id/selectVideoBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_video" />

            <EditText
                android:id="@+id/startTimeET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/start_time_in_minute"
                android:importantForAutofill="no"
                android:inputType="number"
                android:visibility="gone" />

            <EditText
                android:id="@+id/endTimeET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/end_time_in_minute"
                android:importantForAutofill="no"
                android:inputType="number"
                android:visibility="gone" />

            <Button
                android:id="@+id/recordBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/record_voiceover"
                android:visibility="gone" />

            <Button
                android:id="@+id/playBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/play_video_with_voiceover"
                android:visibility="gone" />

            <VideoView
                android:id="@+id/videoView"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:visibility="gone" />

        </LinearLayout>

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/recordingLottieView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerInParent="true"
            android:visibility="gone"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/recording" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:clickable="true"
            android:visibility="gone" />
    </RelativeLayout>
</layout>
